unpackaged/main/default/objects/Vehicle__c/fields/Date_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Change__c</fullName>
    <label>Date Of Change</label>
    <type>Date</type>
</CustomField>