unpackaged/main/default/objects/Vehicle__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>