unpackaged/main/default/objects/Vehicle__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>