unpackaged/main/default/objects/Vehicle__c/fields/Last_MOT_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MOT_Date__c</fullName>
    <label>Last MOT Date</label>
    <type>Date</type>
</CustomField>