unpackaged/main/default/objects/Vehicle__c/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <label>Make &amp; Model</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>