unpackaged/main/default/objects/Vehicle__c/fields/Owned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Owned_Start_Date__c</fullName>
    <label>Owned Start Date</label>
    <type>Date</type>
</CustomField>