unpackaged/main/default/objects/Vehicle__c/fields/Previous_Accident_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Accident_Date__c</fullName>
    <label>Previous Accident Date</label>
    <type>Date</type>
</CustomField>