unpackaged/main/default/objects/Vehicle__c/fields/Previous_Accidents__c.field-meta.xml
<CustomField>
    <fullName>Previous_Accidents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Accidents</label>
    <type>Checkbox</type>
</CustomField>