unpackaged/main/default/objects/Vehicle__c/fields/Previous_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Previous_Drivers__c</fullName>
    <label>Previous Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>