unpackaged/main/default/objects/Vehicle__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <label>Reg No</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>