unpackaged/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>Garage/Repairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>