unpackaged/main/default/objects/Vehicle__c/fields/ULEZ_Compliant__c.field-meta.xml
<CustomField>
    <fullName>ULEZ_Compliant__c</fullName>
    <label>ULEZ Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>