unpackaged/main/default/objects/Vehicle__c/fields/Van_Number__c.field-meta.xml
<CustomField>
    <fullName>Van_Number__c</fullName>
    <label>Van Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>