unpackaged/main/default/objects/Vehicle__c/fields/Vehicle_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Ownership__c</fullName>
    <label>Vehicle Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspect Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Via HSBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>