unpackaged/main/default/objects/Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>