unpackaged/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Van_Number__c</columns>
    <columns>Reg_No__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Internal_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>